# home-automation

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: rust_ci.yaml
crates/led-server/: Cargo.toml
crates/rgb-led/: Cargo.toml
crates/rgb-led/src/: lib.rs
crates/wifi/src/: lib.rs
esp32-projects/: .bazelrc  .taplo.toml  BazelResources.md  Cargo.toml  MODULE.bazel  README.md  clippy.toml
esp32-projects/.cargo/: config.toml
esp32-projects/crates/dht/: Cargo.toml  build.rs
esp32-projects/crates/dht/src/: lib.rs  main.rs
esp32-projects/crates/led-server/: BUILD.bazel  Cargo.toml  build.rs
esp32-projects/crates/led-server/src/: main.rs
esp32-projects/crates/motor-controller-uln2003/: Cargo.toml  build.rs
esp32-projects/crates/motor-controller-uln2003/src/: lib.rs  main.rs
esp32-projects/crates/rgb-led/: BUILD.bazel  Cargo.toml  build.rs
esp32-projects/crates/rgb-led/src/: lib.rs
esp32-projects/crates/wifi/: BUILD.bazel  Cargo.toml  build.rs
esp32-projects/crates/wifi/src/: lib.rs
