[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
authors = ["Maÿlis Whetsel <maylisw31@gmail.com>"]

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[workspace.dependencies]
# external
anyhow = "1.0.94"
embuild = "0.33.0"
esp-idf-svc = "0.50.1"
esp-idf-hal = { version = "=0.45.0", features = ["rmt-legacy"] }
log = "0.4"
rgb = "0.8.50"
toml-cfg = "0.2.0"

# local
rgb-led = { path = "./crates/rgb-led" }
wifi = { path = "./crates/wifi" }

# todo: enable lints
[workspace.lints.rust]
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_extern_crates = "warn"
unused_lifetimes = "warn"
unreachable_pub = "warn"

# [workspace.lints.clippy]
