[workspace]
resolver = "2"
members = [
    "crates/led-server",
    "crates/rgb-led",
    "crates/wifi"
]

[workspace.package]
edition = "2021"
authors = ["Maÿlis Whetsel <maylisw31@gmail.com>"]

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[workspace.dependencies]
# external
anyhow = "1.0.94"
embuild = "0.33.0"
esp-idf-svc = "0.50.1"
esp-idf-hal = { version = "=0.45.0", features = ["rmt-legacy"] }
log = "0.4"
rgb = "0.8.50"
toml-cfg = "0.2.0"

# local
rgb-led = { path = "./crates/rgb-led" }
wifi = { path = "./crates/wifi" }

# See https://doc.rust-lang.org/rustc/lints/listing/index.html
# for a full list or run `rustc -W help`
[workspace.lints.rust]
absolute_paths_not_starting_with_crate = "warn"
bad-style = "warn"
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
let-underscore = "warn"
nonstandard-style = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused = "warn"
unused_lifetimes = "warn"
unreachable_pub = "warn"

# See https://doc.rust-lang.org/clippy/index.html
[workspace.lints.clippy]
nursery = "warn"
pedantic = "warn"
missing_errors_doc = {level="allow", priority=1}
suspicious = "deny"
