[package]
name = "rgb-led"
version = "0.0.0"
edition.workspace = true
authors.workspace = true

[dependencies]
# external
anyhow.workspace = true
esp-idf-hal.workspace = true
esp-idf-svc.workspace = true
log.workspace = true
rgb.workspace = true

[build-dependencies]
embuild.workspace = true

[lints]
workspace = true
