[package]
name = "wifi"
version = "0.0.0"
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
esp-idf-svc.workspace = true
log.workspace = true

[build-dependencies]
embuild.workspace = true

[dev-dependencies]
toml-cfg.workspace = true

[lints]
workspace = true
